# script-languages-container-ci-setup

./: .coverage  .gitattributes  .gitignore  .lint.json  .lint.txt  .pre-commit-config.yaml  .workflow-patcher.yml  README.md  SECURITY.md  build_config.json  dependencies.md  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  cd.yml  check_ci.yaml  check_setup_py.yaml  check_version.yaml  checks.yaml  checks.yml  ci.yml  gh-pages.yml  merge-gate.yml  pr-merge.yml  release.yaml  release_droid_upload_github_release_assets.yml  report.yml  shellcheck.yaml  slc_cd.yml  slc_cd_flavor.yml  slc_cd_self_check.yml  slc_cd_upload_to_release.yml  slc_ci.yml  slc_ci_build_slc.yml  slc_ci_check_for_build.yml  slc_ci_flavor.yml  slc_ci_prepare_test_container.yml  slc_ci_self_check.yml  slc_ci_test_slc.yml  slc_nightly.yml  slc_nightly_flavor.yml  slc_nightly_self_check.yml  slow-checks.yml  test.yml  validate_slc_github_workflows.yml
doc/: changes_0.1.0.md
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.5.0.md  changes_0.6.0.md  changes_0.7.0.md  changes_0.8.0.md  changes_1.0.0.md  changes_1.1.0.md  changes_1.2.0.md  changes_1.2.1.md  changes_1.3.0.md  changes_1.3.1.md  changes_1.4.0.md  changes_1.5.0.md  changes_1.6.0.md  changes_1.7.0.md  changes_1.8.0.md  changes_2.0.0.md  changes_2.0.1.md  changes_2.0.2.md  changes_2.0.3.md  changes_3.0.0.md  changes_3.1.0.md  changes_3.2.0.md  changes_3.2.1.md  changes_3.3.0.md  changes_3.3.1.md  changes_3.3.2.md  changes_3.3.3.md  changes_3.4.0.md  changes_3.5.0.md  changes_4.0.0.md  changes_4.0.1.md  changes_4.1.0.md  changes_4.2.0.md  changes_4.3.0.md  changes_4.3.1.md  (+4 more)
exasol/slc_ci_setup/: __init__.py  version.py
exasol/slc_ci_setup/cli/: main.py
exasol_script_languages_container_ci_setup/: __init__.py  doctor.py  health_check.py  main.py  version.py
exasol_script_languages_container_ci_setup/lib/: __init__.py  aws_access.py  ci_build.py  deployer.py  generate_buildspec_common.py  github_draft_release_creator.py  github_release_creator.py  release_build.py  render_template.py  run_deploy_ci_build.py  run_deploy_source_credentials.py  run_generate_buildspec.py  run_generate_release_buildspec.py  run_start_build.py  run_start_ci_build.py  run_start_release_build.py  source_credentials.py
exasol_script_languages_container_ci_setup/templates/: build_buildspec.yaml  buildspec_batch_entry.yaml  buildspec_hull.yaml  config_schema.json  release_build_buildspec.yaml  slc_code_build.yaml  slc_code_release_build.yaml  slc_source_credential.yaml
flavors/integration_test/: ci.json  packages.yml
script-languages-container-ci-setup/: doctor.py  main.py
script-languages-container-ci-setup/lib/: run_deploy_source_credentials.py
script_languages_container_ci_setup/: main.py
script_languages_container_ci_setup/lib/: render_template.py  run_deploy_ci_build.py  run_deploy_source_credentials.py  run_generate_buildspec.py  upload_cloudformation.py
slc_ci_setup/: doctor.py
slc_ci_setup/lib/: render_cloudformation.py  render_template.py  run_deploy_ci_build.py  run_deploy_source_credentials.py  secret_name_reader.py
slc_ci_setup/templates/: buildspec_batch_entry.yaml  buildspec_hull.yaml  slc_code_build.yaml  slc_source_credential.yaml
test/: cloudformation_validation.py  conftest.py  test_deploy_ci.py  test_deploy_source_credentials.py  test_generate_buildspec.py  test_start_ci_build.py  test_start_release_build.py  test_start_test_release_build.py  test_webhook_filter_pattern.py
test/integration/: test_deploy_source_credentials.py  test_integration.py
test/integration_tests/: test_deploy_ci.py  test_deploy_source_credentials.py
test/unit/: cloudformation_validation.py  test_aws_access_start_code_build.py  test_deploy_ci.py  test_deploy_source_credentials.py  test_generate_buildspec.py  test_start_ci_build.py  test_start_release_build.py  test_webhook_filter_pattern.py
test/unit_tests/: conftest.py  test_aws_access_start_code_build.py  test_config_data_model.py  test_config_data_model_generator.py  test_deploy_ci.py  test_deploy_source_credentials.py  test_generate_buildspec.py  test_pydantic_model_generator.py  test_start_ci_build.py  test_start_release_build.py  test_start_test_release_build.py
user_guide/: ci-flow.drawio  release-flow.drawio  test-release-flow.drawio  user_guide.md
(+105 files in other folders)
