[tool.poetry]
name = "exasol-script-languages-container-ci-setup"
version = "1.5.0"
description = "Manages AWS cloud CI build infrastructure."

license = "MIT"

authors = [
    "Thomas Uebensee <ext.thomas.uebensee@exasol.com>"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
click = "^8.1.3"
jinja2 = ">=3.1.0"
exasol_error_reporting_python = "^0.3.0"
exasol-script-languages-container-ci = "^1.6.0"
boto3 = "1.34.118"
botocore = "1.34.118"
jsonschema = "^4.22.0"
PyGithub = "^2.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
toml = ">=0.10.2"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
cfn-lint = "^0.75.1"

[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]
