[tool.poetry]
name = "exasol-script-languages-container-ci-setup"
version = "1.8.0"
description = "Manages AWS cloud CI build infrastructure."

license = "MIT"

authors = [
    "Thomas Uebensee <ext.thomas.uebensee@exasol.com>"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
click = "^8.1.3"
jinja2 = ">=3.1.6"
exasol-error-reporting = "^1.0.0"
exasol-script-languages-container-ci = "^1.8.0"
boto3 = "1.37.1"
botocore = "1.37.11"
jsonschema = "^4.22.0"
PyGithub = "^2.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
toml = ">=0.10.2"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
cfn-lint = "^0.75.1"
exasol-toolbox = ">=0.20.0"

[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]


[tool.coverage.run]
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 6.66
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test.*",
]
ignore_errors = true